# mkdocs-redirects

./: .gitignore  CHANGES.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: autofix.yml  ci.yml  deploy-release.yml
.tools/: ci.sh  copier-answers.yml  release.sh
mkdocs_redirects/: plugin.py
requirements/: requirements-style.txt
tests/: test_plugin.py
